.gsd.migrating/exec/92caf5cd-5336-4254-8f63-970adb711096.stderr
   Compiling proc-macro2 v1.0.106
   Compiling quote v1.0.45
   Compiling libm v0.2.16
   Compiling serde_core v1.0.228
   Compiling num-traits v0.2.19
   Compiling portable-atomic v1.13.1
   Compiling crossbeam-utils v0.8.21
   Compiling libc v0.2.186
   Compiling rayon-core v1.13.0
   Compiling crc32fast v1.5.0
   Compiling icu_properties_data v2.2.0
   Compiling slotmap v1.1.1
   Compiling yeslogic-fontconfig-sys v6.0.1
   Compiling khronos_api v3.1.0
   Compiling windows_x86_64_gnu v0.52.6
   Compiling zerocopy v0.8.48
   Compiling flate2 v1.1.9
   Compiling gl_generator v0.14.0
   Compiling paste v1.0.15
   Compiling av-scenechange v0.14.1
    Checking once_cell v1.21.4
   Compiling crossbeam-epoch v0.9.18
   Compiling memoffset v0.9.1
    Checking core_maths v0.1.1
    Checking tracing-core v0.1.36
   Compiling crossbeam-deque v0.8.6
   Compiling syn v2.0.117
    Checking ttf-parser v0.25.1
   Compiling memmap2 v0.9.10
   Compiling png v0.18.1
   Compiling field-offset v0.3.6
   Compiling simd_helpers v0.1.0
    Checking euclid v0.22.14
    Checking windows-targets v0.52.6
   Compiling rav1e v0.8.1
   Compiling num-integer v0.1.46
    Checking bitflags v2.11.1
   Compiling rayon v1.12.0
    Checking windows-sys v0.52.0
   Compiling num-bigint v0.4.6
    Checking lyon_geom v1.0.19
   Compiling windows_x86_64_gnu v0.53.1
   Compiling rspolib v0.1.2
    Checking moxcms v0.8.1
    Checking pulldown-cmark v0.13.3
    Checking fontdb v0.23.0
    Checking lyon_path v1.0.19
   Compiling glutin_egl_sys v0.7.1
   Compiling num-rational v0.4.2
   Compiling glutin_wgl_sys v0.6.1
   Compiling serde v1.0.228
   Compiling i-slint-compiler v1.16.1
   Compiling maybe-rayon v0.1.1
    Checking lyon_algorithms v1.0.20
    Checking chrono v0.4.44
    Checking taffy v0.9.2
   Compiling serde_json v1.0.149
    Checking windows-targets v0.53.5
   Compiling glutin v0.32.3
   Compiling winapi-x86_64-pc-windows-gnu v0.4.0
   Compiling glutin-winit v0.5.0
    Checking integer-sqrt v0.1.5
    Checking windows-sys v0.60.2
   Compiling synstructure v0.13.2
   Compiling derive_utils v0.15.1
   Compiling winapi v0.3.9
   Compiling i-slint-backend-winit v1.16.1
   Compiling ntapi v0.4.3
    Checking toml_datetime v1.1.1+spec-1.1.0
    Checking serde_spanned v1.1.1
    Checking tracing-log v0.2.0
    Checking crossbeam-channel v0.5.15
    Checking toml v1.1.2+spec-1.1.0
   Compiling bytemuck_derive v1.10.2
   Compiling zerofrom-derive v0.1.7
   Compiling yoke-derive v0.8.2
   Compiling zerovec-derive v0.11.3
   Compiling displaydoc v0.2.5
   Compiling windows-interface v0.59.3
   Compiling windows-implement v0.60.2
   Compiling thiserror-impl v2.0.18
   Compiling derive_more-impl v2.1.1
   Compiling equator-macro v0.4.2
   Compiling strum_macros v0.28.0
   Compiling zerocopy-derive v0.8.48
   Compiling profiling-procmacros v1.0.18
   Compiling arg_enum_proc_macro v0.3.4
   Compiling num-derive v0.4.2
   Compiling tracing-attributes v0.1.31
   Compiling equator v0.4.2
    Checking windows-core v0.62.2
    Checking windows-core v0.61.2
   Compiling profiling v1.0.18
   Compiling const-field-offset-macro v0.2.0
   Compiling aligned-vec v0.6.4
   Compiling snafu-derive v0.8.9
    Checking windows-future v0.3.2
    Checking windows-numerics v0.3.1
    Checking windows-collections v0.3.2
   Compiling bytemuck v1.25.0
   Compiling v_frame v0.3.9
   Compiling pin-project-internal v1.1.13
   Compiling font-types v0.11.3
    Checking tiny-skia-path v0.12.0
    Checking windows v0.62.2
   Compiling rgb v0.8.53
   Compiling thiserror v2.0.18
    Checking read-fonts v0.37.0
    Checking zerofrom v0.1.8
   Compiling av1-grain v0.2.5
    Checking yoke v0.8.2
    Checking rustybuzz v0.20.1
    Checking zerovec v0.11.6
    Checking zerotrie v0.2.4
    Checking tinystr v0.8.3
    Checking potential_utf v0.1.5
    Checking const-field-offset v0.2.0
    Checking icu_collections v2.2.0
    Checking icu_locale_core v2.2.0
    Checking usvg v0.47.0
   Compiling tiny-skia v0.12.0
   Compiling derive_more v2.1.1
    Checking icu_provider v2.2.0
    Checking tracing v0.1.44
   Compiling qoi v0.4.1
   Compiling num_enum_derive v0.7.6
    Checking icu_properties v2.2.0
    Checking icu_normalizer v2.2.0
   Compiling half v2.7.1
    Checking skrifa v0.40.0
    Checking icu_locale v2.2.0
    Checking harfrust v0.5.2
   Compiling snafu v0.8.9
   Compiling tiff v0.11.3
   Compiling fontique v0.8.0
    Checking parley_data v0.8.0
   Compiling exr v1.74.0
    Checking icu_segmenter v2.2.0
   Compiling idna_adapter v1.2.2
   Compiling vtable-macro v0.4.0
   Compiling resvg v0.47.0
   Compiling idna v1.1.0
    Checking swash v0.2.7
   Compiling ravif v0.13.0
   Compiling i-slint-common v1.16.1
   Compiling url v2.5.8
    Checking pin-project v1.1.13
    Checking lyon_extra v1.1.0
   Compiling strum v0.28.0
   Compiling image v0.25.10
    Checking windows-future v0.2.1
    Checking windows-collections v0.2.0
    Checking windows-numerics v0.2.0
   Compiling i-slint-core-macros v1.16.1
   Compiling auto_enums v0.8.8
   Compiling serde_derive v1.0.228
   Compiling num_enum v0.7.6
    Checking vtable v0.4.0
    Checking windows v0.61.3
    Checking winit v0.30.13
    Checking femtovg v0.23.2
    Checking softbuffer v0.4.8
   Compiling tokio-macros v2.7.0
    Checking tracing-subscriber v0.3.23
   Compiling i-slint-backend-selector v1.16.1
    Checking webbrowser v1.2.1
    Checking tokio v1.52.3
    Checking keyboard-types v0.7.0
    Checking muda v0.18.0
    Checking accesskit_windows v0.30.0
    Checking accesskit_winit v0.30.0
   Compiling slint-build v1.16.1
   Compiling cmt-rs v0.1.0 (/mnt/j/cmt-rs)
   Compiling slint-macros v1.16.1
    Checking sysinfo v0.39.2
    Checking parley v0.8.0
    Checking i-slint-core v1.16.1
    Checking i-slint-renderer-femtovg v1.16.1
    Checking i-slint-renderer-software v1.16.1
    Checking slint v1.16.1
error[E0308]: mismatched types
    --> src/platform/process.rs:237:13
     |
 235 | ...   ...rsionInfoW(
     |       ...---------- arguments to this function are incorrect
 236 | ...       PCWSTR(wide_path.a...
 237 | ...       0,
     |           ^ expected `Option<u32>`, found integer
     |
     = note: expected enum `std::option::Option<u32>`
                found type `{integer}`
note: function defined here
    --> /home/evild/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/windows-0.62.2/src/Windows/Win32/Storage/FileSystem/mod.rs:1225:15
     |
1225 | ...fn GetFil...nfoW<P0...
     |       ^^^^^^...^^^^
help: try wrapping the expression in `Some`
     |
 237 |             Some(0),
     |             +++++ +

error[E0599]: no method named `as_bool` found for enum `Result<..., ...>` in the current scope
   --> src/platform/process.rs:242:16
    |
242 | ...ed.as_bool() {
    |       ^^^^^^^ method not found in `Result<(), ...>`
    |
    = note: the full name for the type has been written to '/mnt/j/cmt-rs/target/x86_64-pc-windows-gnu/debug/deps/cmt_rs-77edadc414fd948a.long-type-7643559877578303497.txt'
    = note: consider using `--verbose` to print the full type name to the console

Some errors have detailed explanations: E0308, E0599.
For more information about an error, try `rustc --explain E0308`.
error: could not compile `cmt-rs` (bin "cmt-rs") due to 2 previous errors
